Fixed the footer overlap the content

--- a/angular/src/app/app.component.scss
+++ b/angular/src/app/app.component.scss
@@ -290,3 +290,7 @@
 //     visibility: hidden;
 //   }
 // }
+
+.footer-height{
+  height: 80px;
+}
